added range queries on posts
